2011-10-09  Daniel Bates  <dbates@webkit.org>

        Attempt to fix the Leopard Intel Debug build after changeset 97034 <http://trac.webkit.org/changeset/97034>
        (https://bugs.webkit.org/show_bug.cgi?id=68035)

        * page/FrameView.cpp:
        (WebCore::FrameView::zoomAnimatorTransformChanged): Explicitly convert double precision result to
        an integer. I am unsure if this fix is correct. We need to look into this some more. See
        <https://bugs.webkit.org/show_bug.cgi?id=69739> for more details.

2011-10-09  Luke Macpherson   <macpherson@chromium.org>

        Fix Lion, Leopard and Snow Leopard builds after changeset 97034 <http://trac.webkit.org/changeset/97034>
        (https://bugs.webkit.org/show_bug.cgi?id=68035)
        https://bugs.webkit.org/show_bug.cgi?id=69735

        Reviewed by Daniel Bates.

        * testing/Internals.cpp:
        Mark unused parameters to prevent compile errors when GESTURE_EVENTS and SMOOTH_SCROLLING are disabled.
        (WebCore::Internals::setEnableScrollAnimator):
        (WebCore::Internals::setZoomAnimatorTransform):
        (WebCore::Internals::setZoomParameters):

2011-10-09  Kent Tamura  <tkent@chromium.org>

        Remove redundant code of HTMLSelectElement.
        https://bugs.webkit.org/show_bug.cgi?id=69701

        Reviewed by Darin Adler.

        No new tests, just a refactoring.

        * html/HTMLSelectElement.cpp:
        (WebCore::HTMLSelectElement::deselectItems):
        Rename inner deselectItems() to deselectItemsWithoutValidation().
        (WebCore::HTMLSelectElement::setSelectedIndex):
        Rename a callsite of another setSelectedIndex() to setSelectedIndexInternal().
        (WebCore::HTMLSelectElement::setSelectedIndexByUser):
        ditto, and update a callsite of updateSelectedState().
        (WebCore::HTMLSelectElement::listBoxSelectItem):
        Update a callsite of updateSelectedState().
        (WebCore::HTMLSelectElement::activeSelectionEndListIndex):