@@ -1,5 +1,15 @@
 2011-10-09  Daniel Bates  <dbates@webkit.org>
 
+        Another attempt to fix the Leopard Intel Debug build after changeset 97034 <http://trac.webkit.org/changeset/97034>
+        (https://bugs.webkit.org/show_bug.cgi?id=68035)
+
+        * page/FrameView.cpp:
+        (WebCore::FrameView::zoomAnimatorTransformChanged): Explicitly convert a double precision result
+        to a single precision result. I am unsure if this fix is correct. We need to look into this some
+        more. See <https://bugs.webkit.org/show_bug.cgi?id=69739> for more details.
+
+2011-10-09  Daniel Bates  <dbates@webkit.org>
+
         Attempt to fix the Leopard Intel Debug build after changeset 97034 <http://trac.webkit.org/changeset/97034>
         (https://bugs.webkit.org/show_bug.cgi?id=68035)
 
